# Templates-And-Tools

./: .gitignore  README.md
Templates/Project Template/: CMakeLists.txt  README.md
Templates/Project Template/inc/: SystemInit.h  main.h  stm32wbxx_hal_conf.h
Templates/Project Template/src/: SystemFunctions.c  SystemInit.c  main.c  stm32wbxx_hal_msp.c
Templates/Project Template/stm32_WB55/: CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake
Templates/Project Template/stm32_WB55/inc/: main.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h
Templates/Project Template/stm32_WB55/src/: main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
Templates/code/: VS_Code_Snippits.json  cHeaderTamplate.h  cSourceTemplate.c  vs_code_task.json
